--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>INDEX</title>
   </head>
   <body>
-    <h1>Olá Mundo!</h1> 
+    <h1>Olá Mundo!</h1>
+    <p>Meu nome: Amanda</p> 
+    <p>Minha Idade: 27</p>
+    <p>Minha profissão: Segurança</p>
+    <p>CPF: 409.242.248.27</p>	
   </body>
 </html>
